Updated with new changes

--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
 		
 		<br>
 		<div>
-			<label>Email <span>(Username)</span></label>
+			<label>PHONE_NUMBER</label>
 		</div>
 		<div>
 			<label id="email_value"></label>
